# IF3221_Tugas-Besar_Kelompok-1_K3

./: Data_Cleaner.ipynb  IF3211_Experiments.ipynb  IF3221_Tugas_Besar.ipynb  README.md  azm_sr_gwas_filtered_unitigs_output.csv  cfx_sr_gwas_filtered_unitigs_output.csv  main.py  original data.txt  pyproject.toml  test.csv
data/: azm_features.csv  azm_labels_prediction.csv  azm_real_features.csv  azm_rf_features.csv  azm_sr_features.csv  azm_sr_labels.csv  azm_xgb_features.csv  cfx_features.csv  cfx_real_features.csv  cfx_sr_labels.csv  cip_real_labels.csv
model/: best_rf_model.pkl  best_xgboost_model.json  rf_model.pkl  svm_model.pkl  xgboost_model.json
utilities/: utility.py
