[project]
name = "if3221-tugas-besar-kelompok-1-k3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.87",
    "imbalanced-learn>=0.14.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
